--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ background-blend-mode: lighten;
       
       <div id="resizetel" class="col-sm-12 mt-5 mb-5 p-5">
         <h2 class="text-center">Plantari ortopedici</h2>
-        <h3 class="text-center">Costruzione su misura</h3>
+        <h3 class="text-center">Realizzati su misura</h3>
         <p class="text-center text-dark" style="font-size: large;">Ogni piede è diverso e necessita di un supporto differente</p>
         <p class="text-center"><button id="btnch" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><a id="colorc" style="text-decoration: none; color:#1e1d1d" href="ACplantari.pdf" download>Il mio biglietto da visita</a></button></p> 
       </div>
